--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "description": "Magento module for Sweet Analytics Tracker.",
   "require": {
     "php": "^7.1|^7.2|^7.3",
-    "magento/framework": "^100.1.0|101.0.*|^102.0.0"
+    "magento/framework": "^100.1.0|101.0.*|^102.0.0|^100.1.0-rc1|^102.0.0"
   },
   "autoload": {
     "files": [ "registration.php" ],
