--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
   "license": "OSL-3.0",
   "description": "Magento module for Sweet Analytics Tracker.",
   "require": {
-    "php": "^7.1|^7.2|^7.3",
-    "magento/framework": "^100.1.0|101.0.*|^102.0.0|^100.1.0-rc1|^102.0.0"
+    "php": "^7.1|^7.2|^7.3|^7.4",
   },
   "autoload": {
     "files": [ "registration.php" ],
